# tp1-haskell-algo1-uba

./: CHANGELOG.md  Readme.txt  tp1-repo.cabal
app/: AuxiliaresCatedra.hs  Main.hs  Solucion.hs  TestCatedra.hs
app/src/: Solucion.hs
test/: Main.hs  TestCatedra.hs  TestEquipo.hs
tests/: TestCatedra.hs  TestEquipo.hs
