cabal-version:      2.4
name:               tp1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             -
maintainer:         -

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    Readme.txt

executable tp1
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:    AuxiliaresCatedra,
                      Solucion

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0,
                      HUnit ==1.6.2.0
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
                        app
    other-modules:      AuxiliaresCatedra,
                        Solucion,
                        TestCatedra,
                        TestEquipo
    build-depends:      base,
                        HUnit
